force-app/main/default/objects/HERDC_Category__c/HERDC_Category__c.object-meta.xml
<CustomObject>
    <description>Object to store HERDC Category</description>
    <label>HERDC Category</label>
    <nameField>
        <label>HERDC Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HERDC Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>