force-app/main/default/objects/HERDC_Category__c/fields/I_RS_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>