force-app/main/default/objects/HERDC_Category__c/fields/I_RS_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>