force-app/main/default/objects/HERDC_Category__c/fields/I_RS_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Description__c</fullName>
    <description>This field stores the long form of HERDC Category (text loger than 80 which can be stored in NAME)</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>