force-app/main/default/objects/HERDC_Category__c/fields/I_RS_Parent_HERDC__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Parent_HERDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent HERDC</label>
    <referenceTo>HERDC_Category__c</referenceTo>
    <relationshipLabel>HERDC Categories</relationshipLabel>
    <relationshipName>HERDC_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>