force-app/main/default/objects/HERDC_Category__c/fields/I_RS_Top_Level_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Top_Level_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Level Category</label>
    <referenceTo>HERDC_Category__c</referenceTo>
    <relationshipLabel>HERDC Categories (Top Level Category)</relationshipLabel>
    <relationshipName>HERDC_Categories_Top_Level</relationshipName>
    <type>Lookup</type>
</CustomField>