force-app/main/default/objects/HERDC_Category__c/fields/I_RS_Top_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Top_Level_Code__c</fullName>
    <formula>I_RS_Top_Level_Category__r.I_RS_Code__c</formula>
    <label>Top Level Code</label>
    <type>Text</type>
</CustomField>