force-app/main/default/objects/HERDC_Category__c/fields/I_RS_X2nd_Level_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_X2nd_Level_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Level Category</label>
    <referenceTo>HERDC_Category__c</referenceTo>
    <relationshipLabel>HERDC Categories (2nd Level Category)</relationshipLabel>
    <relationshipName>Second_Level_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>