force-app/main/default/objects/HERDC_Category__c/listViews/All_HERDC_Categories.listView-meta.xml
<ListView>
    <fullName>All_HERDC_Categories</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Description__c</columns>
    <columns>I_RS_Code__c</columns>
    <columns>I_RS_Active__c</columns>
    <columns>I_RS_Start_Date__c</columns>
    <columns>I_RS_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All HERDC Categories</label>
</ListView>